# py-maybetype

./: .gitignore  .markdownlint.json  .readthedocs.yaml  .~lock._rust_option_compat.ods#  CHANGELOG.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: build-test.yml  lint-test.yml  publish-to-pypi.yml  python-lint-test.yml  type-lint.yml
docs/: changelog.rst  conf.py  index.rst  readme.rst  requirements.txt
docs/reference/: index.rst  result.rst
maybetype/: __init__.py  const.py  errors.py  result.py
tests/: test_maybe.py  test_result.py
