[project]
name = "maybetype"
version = "0.5.0"
description = "A basic implementation of a maybe/option type in Python, largely inspired by Rust's Option."
authors = [
    { name="Seth 'Violet' Gibbs" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/svioletg/py-maybetype"
Issues = "https://github.com/svioletg/py-maybetype/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=4.0.1",
    "sphinx>=6.0,<9.0",
    "sphinx-autobuild>=2025.8.25",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
