[project]
name = "py-maybetype"
version = "0.6.0"
description = "A basic implementation of a maybe/option type in Python, largely inspired by Rust's Option."
authors = [
    { name = "Seth 'Violet' Gibbs" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/svioletg/py-maybetype"
Repository = "https://github.com/svioletg/py-maybetype"
Documentation = "https://py-maybetype.readthedocs.io/en/latest/"
Changelog = "https://github.com/svioletg/py-maybetype/blob/main/CHANGELOG.md"
Issues = "https://github.com/svioletg/py-maybetype/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=4.0.1",
    "sphinx>=6.0,<9.0",
    "sphinx-autobuild>=2025.8.25",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["maybetype"]
